--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@headlessui/react": "1.4.1",
     "@heroicons/react": "1.0.4",
     "@react-pdf-viewer/core": "^3.3.2",
+    "@sendgrid/mail": "^7.6.2",
     "next": "11.1.2",
     "next-seo": "4.26.0",
     "react": "17.0.2",
